--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vietkentech",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://baophung020394.github.io/vietkentech/",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
